kustomizations/bootdev/rabbitmq-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bootdev
spec:
  gatewayClassName: traefik
  listeners:
    - protocol: TCP
      group: gateway.networking.k8s.io
      kind: Gateway
      port: 5672
      name: rabbitmq
      allowedRoutes:
        namespaces:
          from: Same
