kustomizations/bootdev/rabbitmq-listener.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute-rabbitmq
  annotations:
    external-dns.alpha.kubernetes.io/target: k3s.lab.smig.tech.
spec:
  parentRefs:
    - name: bootdev
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - backendRefs:
        - name: bootdev
          port: 5672
          group: gateway.networking.k8s.io
          kind: Gateway
          weight: 1
